fixed whitespace on splash

--- a/client/src/components/Footer/footer.scss
+++ b/client/src/components/Footer/footer.scss
@@ -9,7 +9,7 @@ h6 {
 .footer {
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   font-weight: bold;
 }
 .footerLogo {
