--- a/client/src/components/splash/splash.scss
+++ b/client/src/components/splash/splash.scss
@@ -10,6 +10,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-bottom: 0px;
 }
 
 .button-input {
